[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://orai.io"
repository = "https://github.com/oraichain/token-bindings"
version = "0.11.0"


[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.2.8"
cosmwasm-std = "1.2.8"
cosmwasm-storage = "1.2.8"
schemars = "0.8"
serde = "1.0"
itertools = "0.11"
cw-storage-plus = "0.16"
anyhow = "1"
thiserror = "1.0"
cw2 = "1.0.1"

cw-multi-test = "0.16.6"
token-bindings = { path = "./packages/bindings", version = "0.11.0" }
token-bindings-test = { path = "./packages/bindings-test", version = "0.11.0" }
